WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180235
REGRESSION (
r224791
): cookies are shared between ephemeral sessions in the same process pool
https://bugs.webkit.org/show_bug.cgi?id=180235
Summary
REGRESSION (r224791): cookies are shared between ephemeral sessions in the sa...
Alex Christensen
Reported
2017-11-30 20:56:52 PST
REGRESSION (
r224791
): cookies are shared between ephemeral sessions in the same process pool
Attachments
Patch
(10.89 KB, patch)
2017-11-30 21:01 PST
,
Alex Christensen
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-11-30 21:01:57 PST
Created
attachment 328069
[details]
Patch
Alex Christensen
Comment 2
2017-11-30 21:03:48 PST
rdar://problem/35709469
Joseph Pecoraro
Comment 3
2017-11-30 21:28:37 PST
Comment on
attachment 328069
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328069&action=review
r=me, great test!
> Tools/TestWebKitAPI/Tests/WebKitCocoa/CookiePrivateBrowsing.mm:2 > + * Copyright (C) 2016 Apple Inc. All rights reserved.
2017 probably
> Tools/TestWebKitAPI/Tests/WebKitCocoa/CookiePrivateBrowsing.mm:33 > +#import <pal/spi/cf/CFNetworkSPI.h>
Is this one needed? What SPI is used below?
Alex Christensen
Comment 4
2017-11-30 21:32:21 PST
http://trac.webkit.org/r225383
Radar WebKit Bug Importer
Comment 5
2017-11-30 21:35:06 PST
<
rdar://problem/35790726
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug